--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "next": "13.4.7",
-    "postcss": "8.4.24",
+    "next": "^15.0.0",
+    "postcss": "^8.4.47",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "3.3.2"
   }
 }
